tests/cases/standard-library/errors/ari-builtin-unknown.ari
extern "ari" fn bad() -> i64 = "puts";

fn main() -> i64 {
  return 0;
}
